plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.nextdoor'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	sourceSets {
		main {
			java {
				srcDirs = ['src/main/java', 'build/generated/sources/annotationProcessor/java/main']
			}
		}
	}
}

dependencyManagement {
	imports {
		mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1"
		mavenBom "org.springframework.ai:spring-ai-bom:1.1.2"
		mavenBom "io.github.resilience4j:resilience4j-bom:2.2.0"
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
	maven {
		name = 'Central Portal Snapshots'
		url = 'https://central.sonatype.com/repository/maven-snapshots/'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.security:spring-security-messaging:6.5.1'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'

	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'com.querydsl:querydsl-core:5.0.0'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	implementation "org.springframework.ai:spring-ai-client-chat"
	implementation "org.springframework.ai:spring-ai-starter-model-vertex-ai-gemini"
	implementation 'com.google.cloud:google-cloud-vertexai:1.20.1'
	implementation 'com.google.protobuf:protobuf-java:4.30.2'

	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.609'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-gson:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'

	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	implementation 'jakarta.json:jakarta.json-api:2.1.3'
	implementation 'org.glassfish:jakarta.json:2.0.1'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation 'io.micrometer:micrometer-core'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'

	implementation 'org.elasticsearch.client:elasticsearch-rest-client:9.0.3'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'co.elastic.clients:elasticsearch-java:8.11.0'
	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

	implementation 'ch.hsr:geohash:1.4.0'

	implementation 'io.github.resilience4j:resilience4j-spring-boot3'
	implementation 'io.github.resilience4j:resilience4j-circuitbreaker'
	implementation 'io.github.resilience4j:resilience4j-bulkhead'
	implementation 'io.github.resilience4j:resilience4j-ratelimiter'
	implementation 'io.github.resilience4j:resilience4j-timelimiter'

	testImplementation 'org.testcontainers:testcontainers:1.20.4'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.annotationProcessorPath = configurations.annotationProcessor
}
